Add Mann-Whitney U test to check for statistical significance in difference between mean ridership between weekends and weekdays

--- a/project_1.ipynb
+++ b/project_1.ipynb
@@ -8,7 +8,13 @@
     "<h2 align='center'><i><font color='blue'>NYC Subway Ridership and Weather Analysis</font></i></h2>\n",
     "<h3 align='center'>By: Taylor Somma</h3>\n",
     "<p> This is a project analyzing data obtained from the NYC subway system and provided by Udacity. The objective of this analyis is to determine what facets of the weather, time of day, and day of week most influence the number of people that ride the subway in NYC. After determining the variables with the strongest correlation we will produce a predictive model using linear regression with gradient descent to best predict the number of subway riders.</p>\n",
-    "</p><b>Sources</b><br><a href='http://www.udacity.com'>Udacity</a><br><a href='http://pandas.pydata.org/pandas-docs/stable/index.html'>Pandas Documentation</a></p>\n",
+    "</p><b>Sources</b><br>\n",
+    "<a href='http://www.udacity.com'>Udacity</a><br>\n",
+    "<a href='http://pandas.pydata.org/pandas-docs/stable/index.html'>Pandas Documentation</a><br>\n",
+    "<a href='http://abacus.bates.edu/~ganderso/biology/resources/stats_flow_chart_v2014.pdf'>Statistical Test Flowchart</a><br>\n",
+    "<a href='http://www.csse.monash.edu.au/~smarkham/resources/param.htm'>Parametric vs non-parametric data</a><br>\n",
+    "\n",
+    "</p>\n",
     "<p><a href='http://www.magicfilebox.com'>Back to magicfilebox.com</a>"
    ]
   },
@@ -4056,10 +4062,7 @@
      ]
     }
    ],
-   "source": [
-    "scipy_describe_output = scipy.stats.describe(improved_dataset['ENTRIESn_hourly'])\n",
-    "print scipy_describe_output"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -4075,7 +4078,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 57,
    "metadata": {
     "collapsed": false
    },
@@ -4085,22 +4088,28 @@
      "output_type": "stream",
      "text": [
       "DescribeResult(nobs=30470, minmax=(0.0, 32814.0), mean=2158.0427305546441, variance=10774939.423097735, skewness=3.716842161584894, kurtosis=19.18144553673818)\n",
-      "DescribeResult(nobs=12179, minmax=(0.0, 26753.0), mean=1207.4565235240989, variance=2921715.0218204306, skewness=3.6383815465432074, kurtosis=20.726320966998294)\n"
+      "DescribeResult(nobs=12179, minmax=(0.0, 26753.0), mean=1207.4565235240989, variance=2921715.0218204306, skewness=3.6383815465432074, kurtosis=20.726320966998294)\n",
+      "DescribeResult(nobs=42649, minmax=(0.0, 32814.0), mean=1886.5899552158317, variance=8716580.6414166372, skewness=4.025747813992016, kurtosis=23.20878066029205)\n",
+      "Mann-Whitney U Test Output  (149803470.0, 5.7803894056584393e-213)\n"
      ]
     }
    ],
    "source": [
     "scipy_describe_weekdays = scipy.stats.describe(weekdays['ENTRIESn_hourly'])\n",
     "scipy_describe_weekends = scipy.stats.describe(weekends['ENTRIESn_hourly'])\n",
+    "scipy_describe_output = scipy.stats.describe(improved_dataset['ENTRIESn_hourly'])\n",
+    "mann_whitney_u_week_weekend = scipy.stats.mannwhitneyu(weekdays['ENTRIESn_hourly'],weekends['ENTRIESn_hourly'])\n",
     "print scipy_describe_weekdays\n",
-    "print scipy_describe_weekends"
+    "print scipy_describe_weekends\n",
+    "print scipy_describe_output\n",
+    "print 'Mann-Whitney U Test Output ',mann_whitney_u_week_weekend"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<p> Based on "
+    "<p> Assuming a null hypothesis stating that subway ridership is the same during the week and weekend, based on the Mann Whitney U Value of 5.78e-213, which is extremely low, we can safely reject this null hypothesis. Therefore there is a statistically significant difference in subway ridership during the week and weekend.</p>"
    ]
   }
  ],
