Run Kruskall Wallace test comparing each weekdays ridership

--- a/project_1.ipynb
+++ b/project_1.ipynb
@@ -4066,19 +4066,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 59,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "weekdays = improved_dataset[improved_dataset['day_week']<=4]\n",
-    "weekends = improved_dataset[improved_dataset['day_week']>4]"
+    "weekends = improved_dataset[improved_dataset['day_week']>4]\n",
+    "monday = improved_dataset[improved_dataset['day_week']==0]\n",
+    "tuesday = improved_dataset[improved_dataset['day_week']==1]\n",
+    "wednesday = improved_dataset[improved_dataset['day_week']==2]\n",
+    "thursday = improved_dataset[improved_dataset['day_week']==3]\n",
+    "friday = improved_dataset[improved_dataset['day_week']==4]\n",
+    "saturday = improved_dataset[improved_dataset['day_week']==5]\n",
+    "sunday = improved_dataset[improved_dataset['day_week']==6]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 60,
    "metadata": {
     "collapsed": false
    },
@@ -4111,6 +4118,43 @@
    "source": [
     "<p> Assuming a null hypothesis stating that subway ridership is the same during the week and weekend, based on the Mann Whitney U Value of 5.78e-213, which is extremely low, we can safely reject this null hypothesis. Therefore there is a statistically significant difference in subway ridership during the week and weekend.</p>"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(111.21563514879553, 7.0767145292006105e-25)\n"
+     ]
+    }
+   ],
+   "source": [
+    "kruskallwallis_days_of_week=scipy.stats.mstats.kruskalwallis(monday['ENTRIESn_hourly'],tuesday['ENTRIESn_hourly'],wednesday['ENTRIESn_hourly'],thursday['ENTRIESn_hourly'],friday['ENTRIESn_hourly'],saturday['ENTRIESn_hourly'],sunday['ENTRIESn_hourly'])\n",
+    "print kruskallwallis_days_of_week"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h3>Kruskall Wallis Test</h3>\n",
+    "<p> The above output shows the output for the scipy <a href='http://docs.scipy.org/doc/scipy-0.14.0/reference/generated/scipy.stats.mstats.kruskalwallis.html'>Kruskall Wallace</a> test which is testing for a significant difference of riders between all days of the week. The output is the H-statistic and the p-value."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
