--- a/project_1.ipynb
+++ b/project_1.ipynb
@@ -44,24 +44,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      ":0: FutureWarning: IPython widgets are experimental and may change in the future.\n"
+     ]
+    },
+    {
+     "data": {
+      "application/javascript": [
+       "\n",
+       "            IPython.load_extensions('gmaps_js/heatmap_view')\n",
+       "            "
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "import scipy.stats\n",
     "import sklearn\n",
     "import matplotlib.pyplot as plt\n",
+    "import gmaps\n",
     "from sklearn import linear_model\n",
     "from sklearn.metrics import r2_score"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -74,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -363,7 +386,7 @@
        "[8 rows x 21 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -374,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -385,7 +408,7 @@
        "Index([u'UNIT', u'DATEn', u'TIMEn', u'ENTRIESn', u'EXITSn', u'ENTRIESn_hourly', u'EXITSn_hourly', u'datetime', u'hour', u'day_week', u'weekday', u'station', u'latitude', u'longitude', u'conds', u'fog', u'precipi', u'pressurei', u'rain', u'tempi', u'wspdi', u'meanprecipi', u'meanpressurei', u'meantempi', u'meanwspdi', u'weather_lat', u'weather_lon'], dtype='object')"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -396,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -730,7 +753,7 @@
        "[10 rows x 27 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -741,7 +764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -764,6 +787,9 @@
     "pivot_2 = pd.pivot_table(improved_dataset,index='meantempi',aggfunc=np.mean)\n",
     "pivot_3 = pd.pivot_table(improved_dataset,index='meanprecipi',aggfunc=np.mean)\n",
     "pivot_4 = pd.pivot_table(improved_dataset,columns='rain',index='day_week',aggfunc=np.mean)\n",
+    "# Get locations of all stations\n",
+    "grouped_by_station = improved_dataset.groupby(['station'])\n",
+    "grouped_by_station_mean = grouped_by_station.aggregate(np.mean)\n",
     "print 'Min temp: ',improved_dataset['meantempi'].min()\n",
     "print 'Mean temp: ',improved_dataset['meantempi'].mean()\n",
     "print 'Max temp: ',improved_dataset['meantempi'].max()\n",
@@ -774,135 +800,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div style=\"max-height:1000px;max-width:1500px;overflow:auto;\">\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th>day_week</th>\n",
-       "      <th>0</th>\n",
-       "      <th>1</th>\n",
-       "      <th>2</th>\n",
-       "      <th>3</th>\n",
-       "      <th>4</th>\n",
-       "      <th>5</th>\n",
-       "      <th>6</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>hour</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>889.673950</td>\n",
-       "      <td>1341.702092</td>\n",
-       "      <td>1600.429778</td>\n",
-       "      <td>1553.824764</td>\n",
-       "      <td>1612.522608</td>\n",
-       "      <td>1790.108421</td>\n",
-       "      <td>1225.341443</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>192.592965</td>\n",
-       "      <td>306.079698</td>\n",
-       "      <td>339.003151</td>\n",
-       "      <td>338.877487</td>\n",
-       "      <td>350.583333</td>\n",
-       "      <td>329.701994</td>\n",
-       "      <td>347.992418</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>1063.412801</td>\n",
-       "      <td>1207.877963</td>\n",
-       "      <td>1082.971963</td>\n",
-       "      <td>1049.712534</td>\n",
-       "      <td>1006.063274</td>\n",
-       "      <td>272.110942</td>\n",
-       "      <td>222.387214</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>3080.615709</td>\n",
-       "      <td>3619.568394</td>\n",
-       "      <td>3959.696938</td>\n",
-       "      <td>3972.372240</td>\n",
-       "      <td>3816.129237</td>\n",
-       "      <td>1679.344245</td>\n",
-       "      <td>1229.798312</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>2266.823830</td>\n",
-       "      <td>2535.647210</td>\n",
-       "      <td>2577.870213</td>\n",
-       "      <td>2651.118393</td>\n",
-       "      <td>2849.359275</td>\n",
-       "      <td>1880.176842</td>\n",
-       "      <td>1541.782095</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>3405.477712</td>\n",
-       "      <td>3990.406809</td>\n",
-       "      <td>3981.178458</td>\n",
-       "      <td>4068.230444</td>\n",
-       "      <td>3757.201699</td>\n",
-       "      <td>2013.174370</td>\n",
-       "      <td>1575.412752</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "day_week            0            1            2            3            4  \\\n",
-       "hour                                                                        \n",
-       "0          889.673950  1341.702092  1600.429778  1553.824764  1612.522608   \n",
-       "4          192.592965   306.079698   339.003151   338.877487   350.583333   \n",
-       "8         1063.412801  1207.877963  1082.971963  1049.712534  1006.063274   \n",
-       "12        3080.615709  3619.568394  3959.696938  3972.372240  3816.129237   \n",
-       "16        2266.823830  2535.647210  2577.870213  2651.118393  2849.359275   \n",
-       "20        3405.477712  3990.406809  3981.178458  4068.230444  3757.201699   \n",
-       "\n",
-       "day_week            5            6  \n",
-       "hour                                \n",
-       "0         1790.108421  1225.341443  \n",
-       "4          329.701994   347.992418  \n",
-       "8          272.110942   222.387214  \n",
-       "12        1679.344245  1229.798312  \n",
-       "16        1880.176842  1541.782095  \n",
-       "20        2013.174370  1575.412752  "
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Latitude Max, Min 40.889185 40.576152 \n",
+      "Longitude Max, Min  -73.755383 -74.073622\n"
+     ]
     }
    ],
+   "source": [
+    "lat_max = grouped_by_station_mean['latitude'].max()\n",
+    "lat_min = grouped_by_station_mean['latitude'].min()\n",
+    "long_max = grouped_by_station_mean['longitude'].max()\n",
+    "long_min = grouped_by_station_mean['longitude'].min()\n",
+    "print 'Latitude Max, Min',lat_max,lat_min,'\\nLongitude Max, Min ',long_max,long_min\n"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "<img src='https://maps.googleapis.com/maps/api/staticmap?center=40.714728,-73.998672&zoom=12&size=400x400&maptype=roadmap'></img>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "pivot_1.ENTRIESn_hourly"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -976,7 +914,7 @@
        "6         1074.015694  1036.095344"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -987,7 +925,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -995,10 +933,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x10ca1e410>"
+       "<matplotlib.legend.Legend at 0x109d5d510>"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1335,7 +1273,7 @@
        "gyQ5i4iIiGiQJGcRERERDfJ/Xk9MGHwOoTEAAAAASUVORK5CYII=\n"
       ],
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x10c9daf50>"
+       "<matplotlib.figure.Figure at 0x109d5d5d0>"
       ]
      },
      "metadata": {},
@@ -1353,7 +1291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -1361,10 +1299,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1095b63d0>"
+       "<matplotlib.legend.Legend at 0x1029fd690>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2418,7 +2356,7 @@
        "SZsxxhhjTAL4f7xAMLhVYcI6AAAAAElFTkSuQmCC\n"
       ],
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x10390f450>"
+       "<matplotlib.figure.Figure at 0x1091a79d0>"
       ]
      },
      "metadata": {},
@@ -2441,7 +2379,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 28,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean riders on rainy days  2028.19603547\n",
+      "Std Dev riders on rainy days  3189.43337288\n",
+      "Mean riders on non-rainy days  1845.53943866\n",
+      "Std Dev riders on non-rainy days  2878.77084798\n"
+     ]
+    }
+   ],
+   "source": [
+    "rainyDays = improved_dataset[improved_dataset['rain']==1]\n",
+    "nonRainyDays = improved_dataset[improved_dataset['rain']==0]\n",
+    "rainy_entries_mean=rainyDays['ENTRIESn_hourly'].mean()\n",
+    "rainy_entries_std = rainyDays['ENTRIESn_hourly'].std()\n",
+    "stat_dict['rainy_entries_mean']=rainy_entries_mean\n",
+    "stat_dict['rainy_entries_std']=rainy_entries_std\n",
+    "not_rainy_entries_mean=nonRainyDays['ENTRIESn_hourly'].mean()\n",
+    "not_rainy_entries_std=nonRainyDays['ENTRIESn_hourly'].std()\n",
+    "stat_dict['not_rainy_entries_mean']=not_rainy_entries_mean\n",
+    "stat_dict['not_rainy_entries_std']=not_rainy_entries_std\n",
+    "print 'Mean riders on rainy days ',rainy_entries_mean\n",
+    "print 'Std Dev riders on rainy days ',rainy_entries_std\n",
+    "print 'Mean riders on non-rainy days ',not_rainy_entries_mean\n",
+    "print 'Std Dev riders on non-rainy days ',not_rainy_entries_std"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
@@ -2449,10 +2422,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1096a2210>"
+       "<matplotlib.legend.Legend at 0x10e5b7590>"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2756,7 +2729,7 @@
        "RDSxtFkjIiIimliSuYiIiIgmlmQuIiIiooklmYuIiIhoYr8AoCMbrGDHrdcAAAAASUVORK5CYII=\n"
       ],
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x10c094490>"
+       "<matplotlib.figure.Figure at 0x10cc932d0>"
       ]
      },
      "metadata": {},
@@ -2778,7 +2751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -2786,10 +2759,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.text.Text at 0x109c35e50>"
+       "<matplotlib.text.Text at 0x109c7ed10>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -3318,7 +3291,7 @@
        "JasAAAAASUVORK5CYII=\n"
       ],
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x109698210>"
+       "<matplotlib.figure.Figure at 0x10965d850>"
       ]
      },
      "metadata": {},
@@ -3334,7 +3307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -3342,10 +3315,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.text.Text at 0x103893210>"
+       "<matplotlib.text.Text at 0x10b783050>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -3926,7 +3899,7 @@
        "mZlZgzg5MzMzM2uQ/w+2bPhexYwOxQAAAABJRU5ErkJggg==\n"
       ],
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x109c2cd10>"
+       "<matplotlib.figure.Figure at 0x10b79d990>"
       ]
      },
      "metadata": {},
@@ -3942,7 +3915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
@@ -3954,42 +3927,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Mean riders on rainy days  2028.19603547\n",
-      "Std Dev riders on rainy days  3189.43337288\n",
-      "Mean riders on non-rainy days  1845.53943866\n",
-      "Std Dev riders on non-rainy days  2878.77084798\n"
-     ]
-    }
-   ],
-   "source": [
-    "rainyDays = improved_dataset[improved_dataset['rain']==1]\n",
-    "nonRainyDays = improved_dataset[improved_dataset['rain']==0]\n",
-    "rainy_entries_mean=rainyDays['ENTRIESn_hourly'].mean()\n",
-    "rainy_entries_std = rainyDays['ENTRIESn_hourly'].std()\n",
-    "stat_dict['rainy_entries_mean']=rainy_entries_mean\n",
-    "stat_dict['rainy_entries_std']=rainy_entries_std\n",
-    "not_rainy_entries_mean=nonRainyDays['ENTRIESn_hourly'].mean()\n",
-    "not_rainy_entries_std=nonRainyDays['ENTRIESn_hourly'].std()\n",
-    "stat_dict['not_rainy_entries_mean']=not_rainy_entries_mean\n",
-    "stat_dict['not_rainy_entries_std']=not_rainy_entries_std\n",
-    "print 'Mean riders on rainy days ',rainy_entries_mean\n",
-    "print 'Std Dev riders on rainy days ',rainy_entries_std\n",
-    "print 'Mean riders on non-rainy days ',not_rainy_entries_mean\n",
-    "print 'Std Dev riders on non-rainy days ',not_rainy_entries_std"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -4008,7 +3946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -4019,7 +3957,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
@@ -4049,24 +3987,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "DescribeResult(nobs=42649, minmax=(0.0, 32814.0), mean=1886.5899552158317, variance=8716580.6414166372, skewness=4.025747813992016, kurtosis=23.20878066029205)\n"
-     ]
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
@@ -4085,7 +4006,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
@@ -4121,7 +4042,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
@@ -4130,7 +4051,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(111.21563514879553, 7.0767145292006105e-25)\n"
+      "(1196.9710541566496, 2.1655424886355357e-255)\n"
      ]
     }
    ],
