--- a/project_1.ipynb
+++ b/project_1.ipynb
@@ -44,33 +44,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 57,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      ":0: FutureWarning: IPython widgets are experimental and may change in the future.\n"
-     ]
-    },
-    {
-     "data": {
-      "application/javascript": [
-       "\n",
-       "            IPython.load_extensions('gmaps_js/heatmap_view')\n",
-       "            "
-      ],
-      "text/plain": [
-       "<IPython.core.display.Javascript object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -79,7 +57,8 @@
     "import matplotlib.pyplot as plt\n",
     "import gmaps\n",
     "from sklearn import linear_model\n",
-    "from sklearn.metrics import r2_score"
+    "from sklearn.metrics import r2_score\n",
+    "from IPython.display import HTML, Javascript, display"
    ]
   },
   {
@@ -766,7 +745,8 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
@@ -800,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 72,
    "metadata": {
     "collapsed": false
    },
@@ -809,8 +789,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Latitude Max, Min 40.889185 40.576152 \n",
-      "Longitude Max, Min  -73.755383 -74.073622\n"
+      " Latitude Max, Min 40.889185 40.576152 \n",
+      "Longitude Max, Min  -73.755383 -74.073622\n",
+      "AVG:  40.7326685 , -73.9145025\n"
      ]
     }
    ],
@@ -819,35 +800,38 @@
     "lat_min = grouped_by_station_mean['latitude'].min()\n",
     "long_max = grouped_by_station_mean['longitude'].max()\n",
     "long_min = grouped_by_station_mean['longitude'].min()\n",
-    "print 'Latitude Max, Min',lat_max,lat_min,'\\nLongitude Max, Min ',long_max,long_min\n"
+    "print 'Latitude Max, Min',lat_max,lat_min,'\\nLongitude Max, Min ',long_max,long_min\n",
+    "print 'AVG: ',((lat_max+lat_min)/2),',',((long_max+long_min)/2)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 77,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "https://maps.googleapis.com/maps/api/staticmap?size=800x800&maptype=roadmap&markers=color:blue%7C40.730901,-73.981719|40.795066,-73.944297|40.700536,-73.828382|40.813208,-73.929877|40.823877,-73.936443|40.8346113305,-73.9198335613|40.840048,-73.917775|40.848635,-73.912497|40.849495,-73.933632|40.859022,-73.93419|40.604798,-73.998456|40.869359,-73.915329|40.7429223205,-73.9927493294|40.6604557257,-73.9980020088|40.744558,-73.930993|40.743778,-73.923998|40.757303,-73.989787|40.743079,-73.918419|40.753824,-73.981966|40.644959,-74.014034|40.641426,-74.017972|40.729869,-73.86161|40.775545,-73.976398|40.613513,-74.000645|40.7292151579,-73.9842661524|40.791654,-73.964682|40.629164,-73.961678|40.609147,-73.972986|40.616624,-74.030964|40.593214,-73.776433|40.717241,-73.956614|40.753076,-73.93271|40.645089,-73.948975|40.720315,-73.994014|40.761959,-73.925382|40.682558,-73.905501|40.834255,-73.851222|40.6472665,-73.9711885|40.683263,-73.965838|40.669279,-73.932967|40.774984,-73.912067|40.672013,-73.96436|40.675382,-73.87207|40.692304,-73.860151|40.71459,-73.944104|40.7152541773,-73.9677874571|40.731324,-73.954425|40.699316,-73.990474|40.688465,-73.985474|40.6922604216,-73.9866423027|40.663419,-73.902454|40.679921,-73.940858|40.75753,-73.969102|40.711353,-73.88958|40.829495,-73.874559|40.699707,-73.91181|40.688269,-73.980453|40.576298,-73.968523|40.707564,-73.803326|40.667879,-73.950648|40.661596,-73.962193|40.662541,-73.908763|40.661466,-73.916316|40.643738,-74.073622|40.700488,-73.807933|40.665405,-73.889451|40.576152,-73.975925|40.839892,-73.842952|40.693866,-73.851568\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Produce url for google maps api call\n",
+    "#Create google heat map lat,long objects in an array\n",
+    "#new google.maps.LatLng(37.782551, -122.445368),\n",
+    "#{location: new google.maps.LatLng(37.782, -122.447), weight: 0.5},\n",
     "markerString = ''\n",
     "latitudeArray = grouped_by_station_mean['latitude']\n",
     "longitudeArray = grouped_by_station_mean['longitude']\n",
+    "meanEntries = grouped_by_station_mean['ENTRIESn_hourly']\n",
+    "lat_long_objects=''\n",
+    "lat_long_objects_weighted=''\n",
     "for x in range(len(latitudeArray)):\n",
+    "    lat_long_objects+='new google.maps.LatLng('+str(latitudeArray[x])+','+str(longitudeArray[x])+'),'\n",
+    "    lat_long_objects_weighted+='{location: new google.maps.LatLng('+str(latitudeArray[x])+','+str(longitudeArray[x])+'), weight: '+str(meanEntries[x])+'},'\n",
     "    if x%3==0:\n",
     "        markerString += str(latitudeArray[x])+','+str(longitudeArray[x])+'|'\n",
     "google_maps_marker_shell='https://maps.googleapis.com/maps/api/staticmap?size=800x800&maptype=roadmap&markers=color:blue%7C'\n",
     "google_maps_callurl = google_maps_marker_shell+markerString[0:len(markerString)-1]\n",
-    "print google_maps_callurl"
+    "#print google_maps_callurl\n",
+    "#print lat_long_objects\n",
+    "#print lat_long_objects_weighted\n"
    ]
   },
   {
@@ -855,14 +839,135 @@
    "metadata": {},
    "source": [
     "<h3 align='center'>Google Maps Plot Showing Some Subway Station Locations</h3>\n",
-    "<p align='center'><img src='https://maps.googleapis.com/maps/api/staticmap?size=800x800&maptype=roadmap&markers=color:blue%7C40.730901,-73.981719|40.795066,-73.944297|40.700536,-73.828382|40.813208,-73.929877|40.823877,-73.936443|40.8346113305,-73.9198335613|40.840048,-73.917775|40.848635,-73.912497|40.849495,-73.933632|40.859022,-73.93419|40.604798,-73.998456|40.869359,-73.915329|40.7429223205,-73.9927493294|40.6604557257,-73.9980020088|40.744558,-73.930993|40.743778,-73.923998|40.757303,-73.989787|40.743079,-73.918419|40.753824,-73.981966|40.644959,-74.014034|40.641426,-74.017972|40.729869,-73.86161|40.775545,-73.976398|40.613513,-74.000645|40.7292151579,-73.9842661524|40.791654,-73.964682|40.629164,-73.961678|40.609147,-73.972986|40.616624,-74.030964|40.593214,-73.776433|40.717241,-73.956614|40.753076,-73.93271|40.645089,-73.948975|40.720315,-73.994014|40.761959,-73.925382|40.682558,-73.905501|40.834255,-73.851222|40.6472665,-73.9711885|40.683263,-73.965838|40.669279,-73.932967|40.774984,-73.912067|40.672013,-73.96436|40.675382,-73.87207|40.692304,-73.860151|40.71459,-73.944104|40.7152541773,-73.9677874571|40.731324,-73.954425|40.699316,-73.990474|40.688465,-73.985474|40.6922604216,-73.9866423027|40.663419,-73.902454|40.679921,-73.940858|40.75753,-73.969102|40.711353,-73.88958|40.829495,-73.874559|40.699707,-73.91181|40.688269,-73.980453|40.576298,-73.968523|40.707564,-73.803326|40.667879,-73.950648|40.661596,-73.962193|40.662541,-73.908763|40.661466,-73.916316|40.643738,-74.073622|40.700488,-73.807933|40.665405,-73.889451|40.576152,-73.975925|40.839892,-73.842952|40.693866,-73.851568'></img></p>"
+    "<p align='center'><img src='https://maps.googleapis.com/maps/api/staticmap?size=800x800&maptype=roadmap&markers=color:blue%7C40.730901,-73.981719|40.795066,-73.944297|40.700536,-73.828382|40.813208,-73.929877|40.823877,-73.936443|40.8346113305,-73.9198335613|40.840048,-73.917775|40.848635,-73.912497|40.849495,-73.933632|40.859022,-73.93419|40.604798,-73.998456|40.869359,-73.915329|40.7429223205,-73.9927493294|40.6604557257,-73.9980020088|40.744558,-73.930993|40.743778,-73.923998|40.757303,-73.989787|40.743079,-73.918419|40.753824,-73.981966|40.644959,-74.014034|40.641426,-74.017972|40.729869,-73.86161|40.775545,-73.976398|40.613513,-74.000645|40.7292151579,-73.9842661524|40.791654,-73.964682|40.629164,-73.961678|40.609147,-73.972986|40.616624,-74.030964|40.593214,-73.776433|40.717241,-73.956614|40.753076,-73.93271|40.645089,-73.948975|40.720315,-73.994014|40.761959,-73.925382|40.682558,-73.905501|40.834255,-73.851222|40.6472665,-73.9711885|40.683263,-73.965838|40.669279,-73.932967|40.774984,-73.912067|40.672013,-73.96436|40.675382,-73.87207|40.692304,-73.860151|40.71459,-73.944104|40.7152541773,-73.9677874571|40.731324,-73.954425|40.699316,-73.990474|40.688465,-73.985474|40.6922604216,-73.9866423027|40.663419,-73.902454|40.679921,-73.940858|40.75753,-73.969102|40.711353,-73.88958|40.829495,-73.874559|40.699707,-73.91181|40.688269,-73.980453|40.576298,-73.968523|40.707564,-73.803326|40.667879,-73.950648|40.661596,-73.962193|40.662541,-73.908763|40.661466,-73.916316|40.643738,-74.073622|40.700488,-73.807933|40.665405,-73.889451|40.576152,-73.975925|40.839892,-73.842952|40.693866,-73.851568'></img>\n",
+    "<p align='center'><a href='http://magicfilebox.com/google_map.html'>Link to Heatmap built using locations of stations</a></p>\n",
+    "</p>"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 59,
    "metadata": {
     "collapsed": false
    },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div style=\"max-height:1000px;max-width:1500px;overflow:auto;\">\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>day_week</th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
+       "      <th>6</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>hour</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>889.673950</td>\n",
+       "      <td>1341.702092</td>\n",
+       "      <td>1600.429778</td>\n",
+       "      <td>1553.824764</td>\n",
+       "      <td>1612.522608</td>\n",
+       "      <td>1790.108421</td>\n",
+       "      <td>1225.341443</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>192.592965</td>\n",
+       "      <td>306.079698</td>\n",
+       "      <td>339.003151</td>\n",
+       "      <td>338.877487</td>\n",
+       "      <td>350.583333</td>\n",
+       "      <td>329.701994</td>\n",
+       "      <td>347.992418</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>1063.412801</td>\n",
+       "      <td>1207.877963</td>\n",
+       "      <td>1082.971963</td>\n",
+       "      <td>1049.712534</td>\n",
+       "      <td>1006.063274</td>\n",
+       "      <td>272.110942</td>\n",
+       "      <td>222.387214</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>3080.615709</td>\n",
+       "      <td>3619.568394</td>\n",
+       "      <td>3959.696938</td>\n",
+       "      <td>3972.372240</td>\n",
+       "      <td>3816.129237</td>\n",
+       "      <td>1679.344245</td>\n",
+       "      <td>1229.798312</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>2266.823830</td>\n",
+       "      <td>2535.647210</td>\n",
+       "      <td>2577.870213</td>\n",
+       "      <td>2651.118393</td>\n",
+       "      <td>2849.359275</td>\n",
+       "      <td>1880.176842</td>\n",
+       "      <td>1541.782095</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>3405.477712</td>\n",
+       "      <td>3990.406809</td>\n",
+       "      <td>3981.178458</td>\n",
+       "      <td>4068.230444</td>\n",
+       "      <td>3757.201699</td>\n",
+       "      <td>2013.174370</td>\n",
+       "      <td>1575.412752</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "day_week            0            1            2            3            4  \\\n",
+       "hour                                                                        \n",
+       "0          889.673950  1341.702092  1600.429778  1553.824764  1612.522608   \n",
+       "4          192.592965   306.079698   339.003151   338.877487   350.583333   \n",
+       "8         1063.412801  1207.877963  1082.971963  1049.712534  1006.063274   \n",
+       "12        3080.615709  3619.568394  3959.696938  3972.372240  3816.129237   \n",
+       "16        2266.823830  2535.647210  2577.870213  2651.118393  2849.359275   \n",
+       "20        3405.477712  3990.406809  3981.178458  4068.230444  3757.201699   \n",
+       "\n",
+       "day_week            5            6  \n",
+       "hour                                \n",
+       "0         1790.108421  1225.341443  \n",
+       "4          329.701994   347.992418  \n",
+       "8          272.110942   222.387214  \n",
+       "12        1679.344245  1229.798312  \n",
+       "16        1880.176842  1541.782095  \n",
+       "20        2013.174370  1575.412752  "
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "pivot_1.ENTRIESn_hourly"
    ]
