Embed weighted heatmap of station locations

--- a/project_1.ipynb
+++ b/project_1.ipynb
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 58,
    "metadata": {
     "collapsed": false
    },
@@ -634,7 +634,7 @@
        "max         2.180000        0  "
       ]
      },
-     "execution_count": 57,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1012,7 +1012,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 62,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -1036,9 +1036,14 @@
     "pivot_2 = pd.pivot_table(improved_dataset,index='meantempi',aggfunc=np.mean)\n",
     "pivot_3 = pd.pivot_table(improved_dataset,index='meanprecipi',aggfunc=np.mean)\n",
     "pivot_4 = pd.pivot_table(improved_dataset,columns='rain',index='day_week',aggfunc=np.mean)\n",
+    "\n",
     "# Get locations of all stations\n",
     "grouped_by_station = improved_dataset.groupby(['station'])\n",
     "grouped_by_station_mean = grouped_by_station.aggregate(np.mean)\n",
+    "#Get locations of all units\n",
+    "grouped_by_unit = regular_dataset.groupby(['UNIT'])\n",
+    "grouped_by_unit_mean = grouped_by_station.aggregate(np.mean)\n",
+    "grouped_by_unit_sum = grouped_by_station.aggregate(np.sum)\n",
     "print 'Min temp: ',improved_dataset['meantempi'].min()\n",
     "print 'Mean temp: ',improved_dataset['meantempi'].mean()\n",
     "print 'Max temp: ',improved_dataset['meantempi'].max()\n",
@@ -1049,7 +1054,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 61,
    "metadata": {
     "collapsed": false
    },
@@ -1058,6 +1063,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Latitude Max, Min 40.889185 40.576152 \n",
+      "Longitude Max, Min  -73.755383 -74.073622\n",
+      "AVG:  40.7326685 , -73.9145025\n",
       "Latitude Max, Min 40.889185 40.576152 \n",
       "Longitude Max, Min  -73.755383 -74.073622\n",
       "AVG:  40.7326685 , -73.9145025\n"
@@ -1070,7 +1078,14 @@
     "long_max = grouped_by_station_mean['longitude'].max()\n",
     "long_min = grouped_by_station_mean['longitude'].min()\n",
     "print 'Latitude Max, Min',lat_max,lat_min,'\\nLongitude Max, Min ',long_max,long_min\n",
-    "print 'AVG: ',((lat_max+lat_min)/2),',',((long_max+long_min)/2)\n"
+    "print 'AVG: ',((lat_max+lat_min)/2),',',((long_max+long_min)/2)\n",
+    "\n",
+    "lat_max_unit = grouped_by_unit_mean['latitude'].max()\n",
+    "lat_min_unit = grouped_by_unit_mean['latitude'].min()\n",
+    "long_max_unit = grouped_by_unit_mean['longitude'].max()\n",
+    "long_min_unit = grouped_by_unit_mean['longitude'].min()\n",
+    "print 'Latitude Max, Min',lat_max_unit,lat_min_unit,'\\nLongitude Max, Min ',long_max_unit,long_min_unit\n",
+    "print 'AVG: ',((lat_max_unit+lat_min_unit)/2),',',((long_max_unit+long_min_unit)/2)"
    ]
   },
   {
@@ -1089,6 +1104,7 @@
     "latitudeArray = grouped_by_station_mean['latitude']\n",
     "longitudeArray = grouped_by_station_mean['longitude']\n",
     "meanEntries = grouped_by_station_mean['ENTRIESn_hourly']\n",
+    "\n",
     "lat_long_objects=''\n",
     "lat_long_objects_weighted=''\n",
     "for x in range(len(latitudeArray)):\n",
@@ -1111,6 +1127,32 @@
     "<p align='center'><img src='https://maps.googleapis.com/maps/api/staticmap?size=800x800&maptype=roadmap&markers=color:blue%7C40.730901,-73.981719|40.795066,-73.944297|40.700536,-73.828382|40.813208,-73.929877|40.823877,-73.936443|40.8346113305,-73.9198335613|40.840048,-73.917775|40.848635,-73.912497|40.849495,-73.933632|40.859022,-73.93419|40.604798,-73.998456|40.869359,-73.915329|40.7429223205,-73.9927493294|40.6604557257,-73.9980020088|40.744558,-73.930993|40.743778,-73.923998|40.757303,-73.989787|40.743079,-73.918419|40.753824,-73.981966|40.644959,-74.014034|40.641426,-74.017972|40.729869,-73.86161|40.775545,-73.976398|40.613513,-74.000645|40.7292151579,-73.9842661524|40.791654,-73.964682|40.629164,-73.961678|40.609147,-73.972986|40.616624,-74.030964|40.593214,-73.776433|40.717241,-73.956614|40.753076,-73.93271|40.645089,-73.948975|40.720315,-73.994014|40.761959,-73.925382|40.682558,-73.905501|40.834255,-73.851222|40.6472665,-73.9711885|40.683263,-73.965838|40.669279,-73.932967|40.774984,-73.912067|40.672013,-73.96436|40.675382,-73.87207|40.692304,-73.860151|40.71459,-73.944104|40.7152541773,-73.9677874571|40.731324,-73.954425|40.699316,-73.990474|40.688465,-73.985474|40.6922604216,-73.9866423027|40.663419,-73.902454|40.679921,-73.940858|40.75753,-73.969102|40.711353,-73.88958|40.829495,-73.874559|40.699707,-73.91181|40.688269,-73.980453|40.576298,-73.968523|40.707564,-73.803326|40.667879,-73.950648|40.661596,-73.962193|40.662541,-73.908763|40.661466,-73.916316|40.643738,-74.073622|40.700488,-73.807933|40.665405,-73.889451|40.576152,-73.975925|40.839892,-73.842952|40.693866,-73.851568'></img>\n",
     "<p align='center'><a href='http://magicfilebox.com/google_map.html'>Link to Heatmap built using locations of stations</a></p>\n",
     "</p>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<iframe src=http://magicfilebox.com/google_map.html width=700 height=500></iframe>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from IPython.core.display import HTML\n",
+    "HTML('<iframe src=http://magicfilebox.com/google_map.html width=700 height=500></iframe>')"
    ]
   },
   {
