Move kruskall wallace test to end of page, change labels in histogram showing difference in predicted and actual values of linear regression models

--- a/project_1.ipynb
+++ b/project_1.ipynb
@@ -4065,34 +4065,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h3>Kruskall Wallis Test</h3>\n",
-    "<p> The below output shows the output for the scipy <a href='http://docs.scipy.org/doc/scipy-0.14.0/reference/generated/scipy.stats.mstats.kruskalwallis.html'>Kruskall Wallace</a> test which is testing for a significant difference of riders between all days of the week. The output is the H-statistic and the p-value."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(1196.9710541566496, 2.1655424886355357e-255)\n"
-     ]
-    }
-   ],
-   "source": [
-    "kruskallwallis_days_of_week=scipy.stats.mstats.kruskalwallis(monday['ENTRIESn_hourly'],tuesday['ENTRIESn_hourly'],wednesday['ENTRIESn_hourly'],thursday['ENTRIESn_hourly'],friday['ENTRIESn_hourly'],saturday['ENTRIESn_hourly'],sunday['ENTRIESn_hourly'])\n",
-    "print kruskallwallis_days_of_week"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "<h3>Linear Regression and R-Squared Functions</h3>\n",
     "<h4>These are from completed problems on Udacity Problem set 3</h4>"
    ]
@@ -4960,14 +4932,42 @@
     "    binLabels.append(x*200)\n",
     "plt.figure()\n",
     "plt.title('Histogram of Difference Between Predicted and Actual ENTRIESn_hourly Using Only Rain')\n",
-    "plt.xlabel('Difference')\n",
+    "plt.xlabel('Difference in ENTRIESn_hourly')\n",
     "plt.ylabel('Frequency')\n",
     "(improved_dataset['ENTRIESn_hourly'] - predictions_out_1).hist(bins = binLabels)\n",
     "plt.figure()\n",
     "plt.title('Histogram of Difference Between Predicted and Actual ENTRIESn_hourly Using Multiple Variables')\n",
-    "plt.xlabel('Difference')\n",
+    "plt.xlabel('Difference in ENTRIESn_hourly')\n",
     "plt.ylabel('Frequency')\n",
     "(improved_dataset['ENTRIESn_hourly'] - predictions_out_2).hist(bins = binLabels)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h3>Kruskall Wallis Test</h3>\n",
+    "<p> The below output shows the output for the scipy <a href='http://docs.scipy.org/doc/scipy-0.14.0/reference/generated/scipy.stats.mstats.kruskalwallis.html'>Kruskall Wallace</a> test which is testing for a significant difference of riders between all days of the week. The output is the H-statistic and the p-value."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1196.9710541566496, 2.1655424886355357e-255)\n"
+     ]
+    }
+   ],
+   "source": [
+    "kruskallwallis_days_of_week=scipy.stats.mstats.kruskalwallis(monday['ENTRIESn_hourly'],tuesday['ENTRIESn_hourly'],wednesday['ENTRIESn_hourly'],thursday['ENTRIESn_hourly'],friday['ENTRIESn_hourly'],saturday['ENTRIESn_hourly'],sunday['ENTRIESn_hourly'])\n",
+    "print kruskallwallis_days_of_week"
    ]
   },
   {
