Add seperate linaer regression test for individual variables

--- a/project_1.ipynb
+++ b/project_1.ipynb
@@ -4186,9 +4186,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 67,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -4222,7 +4222,7 @@
     "    lr.fit(features,values)\n",
     "    intercept = lr.intercept_\n",
     "    params = lr.coef_\n",
-    "    \n",
+    "   \n",
     "    return intercept, params\n",
     "    \n",
     "\n",
@@ -4285,51 +4285,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Linear regression using only rain\n",
-      "\n",
-      "R-Squared :  0.375820464297\n",
-      "R-Squared with Gradient Descent :  0.370503151513\n",
-      "Linear regression using multiple variables\n",
-      "\n",
-      "R-Squared :  0.401155466011\n",
-      "R-Squared with Gradient Descent :  0.388821108975\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Run Linear Regression functions and calculate R-Squared values comparing predicted ENTRIESn_hourly to actual\n",
     "features_1 = improved_dataset[['rain']]\n",
-    "features_2 = improved_dataset[['rain', 'precipi','meantempi','fog','weekday']]\n",
+    "features_2 = improved_dataset[['weekday']]\n",
+    "features_best = improved_dataset[['weekday','fog']]\n",
+    "\n",
     "predictions_out_1 = predictions(improved_dataset,features_1)\n",
-    "predictions_out_2 = predictions(improved_dataset,features_2)\n",
-    "predictions_out_1_gd = predictions_gd(improved_dataset,features_1)\n",
-    "predictions_out_2_gd = predictions_gd(improved_dataset,features_2)\n",
+    "predictions_out_1_gd= predictions_gd(improved_dataset,features_1)\n",
     "prediction_1_r_squared = compute_r_squared(improved_dataset['ENTRIESn_hourly'],predictions_out_1)\n",
-    "prediction_2_r_squared = compute_r_squared(improved_dataset['ENTRIESn_hourly'],predictions_out_2)\n",
     "prediction_1_r_squared_gd = compute_r_squared(improved_dataset['ENTRIESn_hourly'],predictions_out_1_gd)\n",
+    "\n",
+    "predictions_out_2 = predictions(improved_dataset,features_2)\n",
+    "predictions_out_2_gd = predictions_gd(improved_dataset,features_2)\n",
+    "prediction_2_r_squared = compute_r_squared(improved_dataset['ENTRIESn_hourly'],predictions_out_2)\n",
     "prediction_2_r_squared_gd = compute_r_squared(improved_dataset['ENTRIESn_hourly'],predictions_out_2_gd)\n",
-    "print 'Linear regression using only rain\\n'\n",
+    "\n",
+    "predictions_out_best = predictions(improved_dataset,features_best)\n",
+    "predictions_out_best_gd = predictions_gd(improved_dataset,features_best)\n",
+    "prediction_best_r_squared = compute_r_squared(improved_dataset['ENTRIESn_hourly'],predictions_out_best)\n",
+    "prediction_best_r_squared_gd = compute_r_squared(improved_dataset['ENTRIESn_hourly'],predictions_out_best_gd)\n",
+    "\n",
+    "print 'Features : Rain'\n",
     "print 'R-Squared : ',prediction_1_r_squared\n",
-    "print 'R-Squared with Gradient Descent : ',prediction_1_r_squared_gd\n",
-    "print 'Linear regression using multiple variables\\n'\n",
+    "print 'R-Squared with Gradient Descent : ',prediction_1_r_squared_gd,'\\n'\n",
+    "\n",
+    "print 'Features : Weekday'\n",
     "print 'R-Squared : ',prediction_2_r_squared\n",
-    "print 'R-Squared with Gradient Descent : ',prediction_2_r_squared_gd"
+    "print 'R-Squared with Gradient Descent : ',prediction_2_r_squared_gd,'\\n'\n",
+    "\n",
+    "print 'Features : Rain, Weekday, fog'\n",
+    "print 'R-Squared : ',prediction_best_r_squared\n",
+    "print 'R-Squared with Gradient Descent : ',prediction_best_r_squared_gd,'\\n'"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h3>Histograms of Differenec Between Predicted and Actual ENTRIESn_hourly</h3>"
+    "<h3>Histograms of Difference Between Predicted and Actual ENTRIESn_hourly</h3>"
    ]
   },
   {
