Made changes to project_1_pdf.pdf

--- a/project_1.ipynb
+++ b/project_1.ipynb
@@ -119,13 +119,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h2 align='center'>Code Below</h2>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "<p><font color=tomato>\n",
     "Please address the following questions in detail. Your answers should be 1-2 paragraphs long.\n",
     "</font></p>\n",
@@ -143,8 +136,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h2 align='center'>Code Below</h2>"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
@@ -238,10 +238,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x10f9ca4d0>"
+       "<matplotlib.legend.Legend at 0x10fb165d0>"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -593,7 +593,7 @@
        "AAAAAElFTkSuQmCC\n"
       ],
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x1134fd8d0>"
+       "<matplotlib.figure.Figure at 0x10a333f50>"
       ]
      },
      "metadata": {},
@@ -622,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
@@ -666,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -710,7 +710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false
    },
@@ -747,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
@@ -758,7 +758,7 @@
        "'The below lines are commented out because they are the print statements whose outputs were used to provide the latitude,longitude, and weights for google maps. The weights are simply the mean ENTRIESn_hourly'"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -807,7 +807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -822,7 +822,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -841,7 +841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "metadata": {
     "collapsed": false
    },
@@ -958,7 +958,7 @@
        "20        2013.174370  1575.412752  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -976,7 +976,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -1051,7 +1051,7 @@
        "6         1074.015694  1036.095344"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1069,7 +1069,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "metadata": {
     "collapsed": false
    },
@@ -1077,10 +1077,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x10f9ca410>"
+       "<matplotlib.legend.Legend at 0x10b1b5690>"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1417,7 +1417,7 @@
        "gyQ5i4iIiGiQJGcRERERDfJ/Xk9MGHwOoTEAAAAASUVORK5CYII=\n"
       ],
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x10b4e8a10>"
+       "<matplotlib.figure.Figure at 0x10ffaf250>"
       ]
      },
      "metadata": {},
@@ -1442,7 +1442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "metadata": {
     "collapsed": false
    },
@@ -1450,10 +1450,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x10cd45410>"
+       "<matplotlib.legend.Legend at 0x10b1b5210>"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2507,7 +2507,7 @@
        "SZsxxhhjTAL4f7xAMLhVYcI6AAAAAElFTkSuQmCC\n"
       ],
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x10cc2e610>"
+       "<matplotlib.figure.Figure at 0x10a33b150>"
       ]
      },
      "metadata": {},
@@ -2530,7 +2530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "metadata": {
     "collapsed": false
    },
@@ -2538,10 +2538,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.text.Text at 0x10953da50>"
+       "<matplotlib.text.Text at 0x109f4fa90>"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -3070,7 +3070,7 @@
        "JasAAAAASUVORK5CYII=\n"
       ],
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x10cc8fb10>"
+       "<matplotlib.figure.Figure at 0x10b1b5e10>"
       ]
      },
      "metadata": {},
@@ -3086,7 +3086,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 37,
    "metadata": {
     "collapsed": false
    },
@@ -3094,10 +3094,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.text.Text at 0x103a804d0>"
+       "<matplotlib.text.Text at 0x1029e5250>"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -3678,7 +3678,7 @@
        "mZlZgzg5MzMzM2uQ/w+2bPhexYwOxQAAAABJRU5ErkJggg==\n"
       ],
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x103a99e90>"
+       "<matplotlib.figure.Figure at 0x1029fda50>"
       ]
      },
      "metadata": {},
@@ -3694,7 +3694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 38,
    "metadata": {
     "collapsed": false
    },
@@ -3714,7 +3714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 39,
    "metadata": {
     "collapsed": false
    },
@@ -3733,7 +3733,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-38-27c622b97396>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#Run Mann-Whitney U Comparing Weekdays to Weeken\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mprint\u001b[0m \u001b[0;34m'Mann-Whitney U Test Output '\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mmann_whitney_u_week_weekend\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;32mprint\u001b[0m \u001b[0;34m'U value : '\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mmann_whitney_u_week_weekend\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mprint\u001b[0m \u001b[0;34m'One-Tailed p-value : '\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mmann_whitney_u_week_weekend\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mprint\u001b[0m \u001b[0;34m'Two-Tailed p-value : '\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmann_whitney_u_week_weekend\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-39-27c622b97396>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#Run Mann-Whitney U Comparing Weekdays to Weeken\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mprint\u001b[0m \u001b[0;34m'Mann-Whitney U Test Output '\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mmann_whitney_u_week_weekend\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;32mprint\u001b[0m \u001b[0;34m'U value : '\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mmann_whitney_u_week_weekend\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mprint\u001b[0m \u001b[0;34m'One-Tailed p-value : '\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mmann_whitney_u_week_weekend\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mprint\u001b[0m \u001b[0;34m'Two-Tailed p-value : '\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmann_whitney_u_week_weekend\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mNameError\u001b[0m: name 'mann_whitney_u_week_weekend' is not defined"
      ]
     }
@@ -3750,7 +3750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 44,
    "metadata": {
     "collapsed": false
    },
@@ -3758,19 +3758,12 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x10f2e34d0>"
+       "<matplotlib.legend.Legend at 0x10ae35d10>"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
     },
     {
      "data": {
@@ -4124,7 +4117,7 @@
        "AABJRU5ErkJggg==\n"
       ],
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x1092bbe50>"
+       "<matplotlib.figure.Figure at 0x10f6d2ad0>"
       ]
      },
      "metadata": {},
@@ -4154,7 +4147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 45,
    "metadata": {
     "collapsed": false
    },
@@ -4225,7 +4218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 46,
    "metadata": {
     "collapsed": true
    },
@@ -4269,7 +4262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 47,
    "metadata": {
     "collapsed": false
    },
@@ -4368,7 +4361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 48,
    "metadata": {
     "collapsed": false
    },
@@ -4484,7 +4477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 49,
    "metadata": {
     "collapsed": false
    },
@@ -4537,7 +4530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 52,
    "metadata": {
     "collapsed": true
    },
@@ -4609,7 +4602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 51,
    "metadata": {
     "collapsed": false
    },
@@ -4689,7 +4682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 55,
    "metadata": {
     "collapsed": false
    },
@@ -4697,10 +4690,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x10f96e350>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x111c26e90>"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -5003,7 +4996,7 @@
        "b32PryiCCbEDAJgQOwCAiQCbTl/8HwxslwAAAABJRU5ErkJggg==\n"
       ],
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x10cc8fa10>"
+       "<matplotlib.figure.Figure at 0x10f09c650>"
       ]
      },
      "metadata": {},
@@ -5298,7 +5291,7 @@
        "AKAmCOwAAABq4v8DPvqOpjSbXNwAAAAASUVORK5CYII=\n"
       ],
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x10ddb7990>"
+       "<matplotlib.figure.Figure at 0x10f13b710>"
       ]
      },
      "metadata": {},
@@ -5586,7 +5579,7 @@
        "SZKkBeFVsZIkSQvCwE6SJGlBGNhJkiQtCAM7SZKkBfH/Aa4I1y+p7R4zAAAAAElFTkSuQmCC\n"
       ],
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x10f96e290>"
+       "<matplotlib.figure.Figure at 0x111c26dd0>"
       ]
      },
      "metadata": {},
@@ -5624,7 +5617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 56,
    "metadata": {
     "collapsed": false
    },
@@ -5632,10 +5625,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x111130250>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x10f095f10>"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -5965,7 +5958,7 @@
        "+g+5x6r8wToaaAAAAABJRU5ErkJggg==\n"
       ],
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x1092cf4d0>"
+       "<matplotlib.figure.Figure at 0x10e8e6750>"
       ]
      },
      "metadata": {},
@@ -6291,7 +6284,7 @@
        "DoWZmZmZmfXNHQozMzMzM+ubOxRmZmZmZta3vwHwwb0d3AM6lgAAAABJRU5ErkJggg==\n"
       ],
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x111130190>"
+       "<matplotlib.figure.Figure at 0x10f095890>"
       ]
      },
      "metadata": {},
@@ -6321,19 +6314,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(1196.9710541566496, 2.1655424886355357e-255)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "kruskallwallis_days_of_week=scipy.stats.mstats.kruskalwallis(monday['ENTRIESn_hourly'],tuesday['ENTRIESn_hourly'],wednesday['ENTRIESn_hourly'],thursday['ENTRIESn_hourly'],friday['ENTRIESn_hourly'],saturday['ENTRIESn_hourly'],sunday['ENTRIESn_hourly'])\n",
     "print kruskallwallis_days_of_week"
